// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Duration /> Duration > 24h 1`] = `
<span>
  more than 24 hrs
</span>
`;

exports[`<Duration /> Duration - empty state 1`] = `
<span>
  N/A
</span>
`;

exports[`<Duration /> Duration 1`] = `
<span>
  4 sec
</span>
`;

exports[`<Duration /> Duration Dynamic 1`] = `
<span>
  <span>
    2 min 4 sec
  </span>
</span>
`;

exports[`<Duration /> Duration Dynamic with icon 1`] = `
<span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-clock fa-w-16 icon-addon-right"
    data-icon="clock"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256,8C119,8,8,119,8,256S119,504,256,504,504,393,504,256,393,8,256,8Zm92.49,313h0l-20,25a16,16,0,0,1-22.49,2.5h0l-67-49.72a40,40,0,0,1-15-31.23V112a16,16,0,0,1,16-16h32a16,16,0,0,1,16,16V256l58,42.5A16,16,0,0,1,348.49,321Z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <span>
    2 min 4 sec
  </span>
</span>
`;

exports[`<Duration /> Duration only 1`] = `
<span>
  26 min 26 sec
</span>
`;

exports[`<Duration /> Duration with icon 1`] = `
<span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-clock fa-w-16 icon-addon-right"
    data-icon="clock"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M256,8C119,8,8,119,8,256S119,504,256,504,504,393,504,256,393,8,256,8Zm92.49,313h0l-20,25a16,16,0,0,1-22.49,2.5h0l-67-49.72a40,40,0,0,1-15-31.23V112a16,16,0,0,1,16-16h32a16,16,0,0,1,16,16V256l58,42.5A16,16,0,0,1,348.49,321Z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  4 sec
</span>
`;

exports[`<Duration /> should render 12 sec (ignore end time) 1`] = `
<span>
  12 sec
</span>
`;

exports[`<Duration /> should render 12 sec (ignore start time and end time) 1`] = `
<span>
  12 sec
</span>
`;

exports[`<Duration /> should render 12 sec (ignore start time) 1`] = `
<span>
  12 sec
</span>
`;
